header WWF Bootstrap

--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div>
-            <div><img src="" alt=""></div>
+    <header  class="container-fluid d-flex flex-column justify-content-between">
+        <nav>
+            <ul class="row justify-content-evenly list-unstyled align-items-center">
+                <li class="col-2"><img src="img/WWF-logo.png" alt="logo" class="img-fluid"></li>
+                <li class="col-2"></li>
+                <li class="col-1 font-weight-bolder"><a href="" class="text-white text-decoration-none">Accueil</a></li>
+                <li class="col-1 font-weight-bolder"><a href="" class="text-white text-decoration-none">La fondation</a></li>
+                <li class="col-1 font-weight-bolder"><a href="" class="text-white text-decoration-none">Nous aider</a></li>
+                <li class="col-1 font-weight-bolder"><a href="" class="text-white text-decoration-none">Contact</a></li>
+            </ul>
+        </nav>
+
+    <article class="row bg-black bg-opacity-50 px-5">
+        <div class="col-6"></div>
+        <div class="col-6">
+            <h1 class="text-center text-white">Le tigre de Birmanie</h1>
+            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellat illum enim recusandae eos adipisci aut veritatis, fugiat dolorum soluta ab officia laudantium, quo numquam ratione voluptas consequuntur cumque vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aperiam dolor illum cum sed dolorem, adipisci omnis cumque. Quisquam similique, eveniet ipsa ab error voluptatum. Aliquam vel accusantium doloremque beatae?</p>
         </div>
-        <div></div>
+    </article>
     </header>
 </body>
 </html>
