main WWE Bootstrap

--- a/index.html
+++ b/index.html
@@ -28,5 +28,38 @@
         </div>
     </article>
     </header>
+
+    <main>
+        <section class="container-fluid p-5">
+            <article class="row justify-content-around">
+                <div class="col-6 px-5"><img src="img/tigre2.jpg" alt="tigre2" class="img-fluid"></div>
+                <div class="col-6 px-5">
+                    <h2>Célébration du mois du tigre à la WWF</h2>
+                    <p class="py-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ad eaque asperiores repellat optio culpa fugit sunt necessitatibus corporis tempora. Atque magni eum iusto illo quasi, est tempore corrupti temporibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque pariatur aut commodi beatae sequi, saepe qui, temporibus aperiam, illum soluta voluptatibus cumque officia neque debitis nisi corporis vel! Excepturi, nihil? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nisi impedit vel doloremque sapiente culpa enim maiores, voluptates hic commodi error autem eaque consectetur sed consequuntur tempore temporibus rerum cupiditate! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ut reprehenderit possimus, provident eos dicta modi deserunt ipsum quam, ex mollitia veritatis? Porro deserunt ex natus, dolore dignissimos amet numquam!</p>
+                </div>
+            </article>
+        </section>
+        
+        <section class="container-fluid p-5 bg-success">
+            <article id="articleTigre3" class="row justify-content-end">
+                <div id="tigre3" class="col-5 px-5"><img src="img/tigre 3.png" alt="tigre 3" class="img-fluid"></div>
+                <div class="col-7 px-5 text-center">
+                    <p class="text-white fs-5 p-2">Aidez les tigres de Birmanie maintenant,</p>
+                    <p class="text-white fs-5 p-2">Devenez membre annuel de la fondation WWF!</p>
+                    <p><a href="" class="text-decoration-none text-white fs-5 p-2 px-4 rounded-pill border border-white bg-primary">Devenir membre</a></p>
+                </div>
+            </article>
+        </section>
+
+        <section class="container-fluid p-5 my-5">
+            <div id="teteTigre" class="row">
+                <div><img src="img/tetechargement.jpg" alt="teteTigre" class="img-fluid"></div>
+                <article class="row justify-content-around bg-white bg-opacity-25 py-5" id="articleTeteTigre">
+                    <p class="col-6 text-center"><a href="" class="text-decoration-none text-white fs-5 p-2 px-4 rounded-pill border border-white bg-black">Lancer le diaporama</a></p>
+                    <p class="col-6 text-center text-white fs-5">Découvrez notre sélection de photos sur le plus mystérieux des félins...</p>
+                </article>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
