footer WWE Bootstrap

--- a/index.html
+++ b/index.html
@@ -61,5 +61,28 @@
             </div>
         </section>
     </main>
+
+    <footer class="container-fluid bg-dark p-4">
+        <nav>
+            <ul class="row justify-content-around list-unstyled align-items-center">
+                <li class="col-2"><img src="img/WWF-logo.png" alt="logo" class="img-fluid"></li>
+                <li class="col-2">
+                    <ul class="list-unstyled">
+                        <li><a href="" class="text-white text-decoration-none">Mentions légales</a></li>
+                        <li><a href="" class="text-white text-decoration-none">FAQ</a></li>
+                        <li><a href="" class="text-white text-decoration-none">Photographie</a></li>
+                    </ul>
+                </li>
+                <li class="col-2"><a href="" class="text-decoration-none text-white fs-5 p-2 px-4 rounded-pill border border-white bg-primary">Devenir membre</a></li>
+                <li class="col-2">
+                    <ul class="list-unstyled row justify-content-around">
+                        <li class="col-4"><a href=""><img src="img/facebook.png" alt="logo facebook" class="img-fluid"></a></li>
+                        <li class="col-4"><a href=""><img src="img/twitter.png" alt="twitter" class="img-fluid"></a></li>
+                        <li class="col-4"><a href=""><img src="img/youtube.png" alt="" class="img-fluid"></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
