changement des paragraphes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="col-6"></div>
         <div class="col-6">
             <h1 class="text-center text-white">Le tigre de Birmanie</h1>
-            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellat illum enim recusandae eos adipisci aut veritatis, fugiat dolorum soluta ab officia laudantium, quo numquam ratione voluptas consequuntur cumque vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aperiam dolor illum cum sed dolorem, adipisci omnis cumque. Quisquam similique, eveniet ipsa ab error voluptatum. Aliquam vel accusantium doloremque beatae?</p>
+            <p class="text-white">Les combats qui font rage depuis un an dans l'extrême nord de la Birmanie font des victimes inattendues: des dizaines de tigres qui survivent tant bien que mal dans la plus grande réserve au monde dédiée à leur protection, et située près des zones de combats.</p>
+            <p class="text-white">En 2010, la junte aujourd'hui dissoute avait étendu ce sanctuaire désormais près de 22.000 km2 -quasiment la taille d'Israël- dans la vallée reculée de Hukang. De 50 à 70 tigres y vivraient aujourd'hui.</p>
         </div>
     </article>
     </header>
@@ -35,7 +36,7 @@
                 <div class="col-6 px-5"><img src="img/tigre2.jpg" alt="tigre2" class="img-fluid"></div>
                 <div class="col-6 px-5">
                     <h2>Célébration du mois du tigre à la WWF</h2>
-                    <p class="py-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ad eaque asperiores repellat optio culpa fugit sunt necessitatibus corporis tempora. Atque magni eum iusto illo quasi, est tempore corrupti temporibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque pariatur aut commodi beatae sequi, saepe qui, temporibus aperiam, illum soluta voluptatibus cumque officia neque debitis nisi corporis vel! Excepturi, nihil? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nisi impedit vel doloremque sapiente culpa enim maiores, voluptates hic commodi error autem eaque consectetur sed consequuntur tempore temporibus rerum cupiditate! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ut reprehenderit possimus, provident eos dicta modi deserunt ipsum quam, ex mollitia veritatis? Porro deserunt ex natus, dolore dignissimos amet numquam!</p>
+                    <p class="py-5">Les mois du tigre de terre commencent le jour du lichun ("établissement du printemps", entre le 2 et 5 février marquant le début du printemps en Chine) et se termine le jour précédant le jingzhe ("éveil de l'hibernation" entre le 5 et le 7 mars) des années eux tiges célestes yi et geng, soit tous les cinq ans. Sont par exemple "mois du tigre de terre". <br> A la tige céleste wu est associé le yàng et l'élément terre, et à la branche terrestre yin, le yàng, l'élément bois, et le signe du tigre. Dans le symbolique des cind éléments, le wuyin correspond donc au "bois qui détruit la terre."</p>
                 </div>
             </article>
         </section>
